--- a/templates/about.html
+++ b/templates/about.html
@@ -91,58 +91,61 @@
     <div id="container">
       <div class="list">
         <div class="two">
-          <span class="profile"
-            ><img
-              src="{{ url_for('static', filename = 'img/about_limnpet.jpg') }}"
-              alt="cannot load a image"
-          /></span>
-          <p style="font-size: 60px; font-weight: 400; color: aliceblue">
-            Hello, We are LimnPet! 🐶
-          </p>
-          <p
-            style="
-              font-size: 20px;
-              font-style: italic;
-              font-weight: 200;
-              color: aliceblue;
-            "
-          >
-            LimnPet is a styling service that makes your pet photos into various
-            painting styles
-          </p>
+          <h1><strong>About</strong></h1>
+          <h3>What is "LimnPet" & Who we are</h3>
 
-          <div class="intext" style="font-size: 30px; color: aliceblue">
-            You no longer have to pay for the styling of your pet photos.<br />
-            Through LimnPet, We have simplified the complicated process for
-            purchasing pet custom goods.<br />
-            From now on, all you need to do is upload a picture of your pet to
-            LimnPet service and save your newly styled picture!<br />
-            If you want to purchase stylized pet printed custom goods, select
-            Goods from the menu.
+          <div class="what">
+            <div class="profile1"
+              ><img
+                src="{{ url_for('static', filename = 'img/about_limnpet.jpg') }}"
+                alt="cannot load a image"
+            /></div>
+            <div class="intext">
+              <h2 style="color: aliceblue">
+                Hello, We are LimnPet! 🐶
+              </h2>
+              <span style="color:black">LimnPet</span> is a styling service that makes 
+              your pet photos into various painting styles. You no longer have to pay 
+              for the styling of your pet photos. Through <span style="color:black">LimnPet</span>, 
+              We have simplified the complicated process for purchasing pet custom goods.
+              From now on, all you need to do is upload a picture of your pet to
+              <span style="color:black">LimnPet</span> service and save your newly styled picture! 
+              If you want to purchase stylized pet printed custom goods, select
+              Goods from the menu.
+            </div>
           </div>
 
-          <p style="font-size: 45px; font-weight: 400; color: aliceblue">
-            <br />Future Plans
-          </p>
+          <div class="what">
+            <span class="profile2"
+              ><img
+                src="{{ url_for('static', filename = 'img/about_limnpet.jpg') }}"
+                alt="cannot load a image"
+            /></span>
+            <p style="font-size: 45px; font-weight: 400; color: aliceblue">
+              <br />Future Plans
+            </p>
 
-          <div
-            class="'intext"
-            style="font-size: 25px; font-weight: 200; color: aliceblue"
-          >
-            <br />LimnPet's exclusive goods edition via
-            <span style="color: rgb(255, 251, 13)"
-              >collaboration with artist, goods brand</span
+            <div
+              class="'intext"
+              style="font-size: 25px; font-weight: 200; color: aliceblue"
             >
-            <br />
-            Considering to add
-            <span style="color: rgb(255, 251, 13)"
-              >photo manipulation Options</span
-            ><br />
-            Stylized pet photos into your own
-            <span style="color: rgb(255, 251, 13)">emoji</span><br />
-            Stylized pet photos into
-            <span style="color: rgb(255, 251, 13)">NFT</span><br />
+              <br />LimnPet's exclusive goods edition via
+              <span style="color: rgb(255, 251, 13)"
+                >collaboration with artist, goods brand</span
+              >
+              <br />
+              Considering to add
+              <span style="color: rgb(255, 251, 13)"
+                >photo manipulation Options</span
+              ><br />
+              Stylized pet photos into your own
+              <span style="color: rgb(255, 251, 13)">emoji</span><br />
+              Stylized pet photos into
+              <span style="color: rgb(255, 251, 13)">NFT</span><br />
+            </div>
           </div>
+
+
         </div>
       </div>
     </div>
