--- a/templates/contact.html
+++ b/templates/contact.html
@@ -91,39 +91,43 @@
     <div id="container" role="main">
       <div class="contact_list">
         <div class="four">
-          <div class="member">
-            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>김한주</p>
-            <p>E-mail : sjh7397@naver.com</p>
-            <p>카카오톡 : Lilac3</p>
+          <div style="padding-top:3rem">
+            <h1><strong>Contact</strong></h1>
+            <h3>If you have any questions, please contact us below</h3>
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>김민지</p>
-            <p>E-mail : sjh7397@naver.com</p>
-            <p>카카오톡 : Lilac3</p>
+            <p style="font-size:x-large"><strong>김한주</strong></p>
+            <p>&ltE-mail&gt<br>hanjukim0922@gmail.com</p>
+            <p>&lt카카오톡&gt<br>hj0922</p>
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>성연재</p>
-            <p>E-mail : sjh7397@naver.com</p>
-            <p>카카오톡 : Lilac3</p>
+            <p style="font-size:x-large"><strong>김민지</strong></p>
+            <p>&ltE-mail&gt<br>vp9397@naver.com</p>
+            <p>&lt카카오톡&gt<br>woodbvo12</p>
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>송종호</p>
-            <p>E-mail : sjh7397@naver.com</p>
-            <p>카카오톡 : Lilac3</p>
+            <p style="font-size:x-large"><strong>성연재</strong></p>
+            <p>&ltE-mail&gt<br>siriyay@naver.com</p>
+            <p>&lt카카오톡&gt<br>proofreadd</p>
           </div>
           <div class="member">
             <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
-            <p>정영훈</p>
-            <p>E-mail : sjh7397@naver.com</p>
-            <p>카카오톡 : Lilac3</p>
+            <p style="font-size:x-large"><strong>송종호</strong></p>
+            <p>&ltE-mail&gt<br>sjh7397@naver.com</p>
+            <p>&lt카카오톡&gt<br>Lilac3</p>
+          </div>
+          <div class="member">
+            <img src="{{ url_for('static', filename = 'img/bg.jpg') }}" />
+            <p style="font-size:x-large"><strong>정영훈</strong></p>
+            <p>&ltE-mail&gt<br>gi93008@naver.com</p>
+            <p>&lt카카오톡&gt<br>gannak8</p>
           </div>
           <div>
             <a href="https://www.limnpet.ml" class="ct">Home</a>
-            <a href="" class="ct">Notion</a>
+            <a href="https://limnpet.notion.site/LimnPet-537f6461d3234937ab94dee11671d22a" class="ct">Notion</a>
             <a href="https://github.com/LiJell/Final-pjt" class="ct">Github</a>
           </div>
         </div>
