--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffd93d;
+  background: linear-gradient(to right, #F2994A, #F2C94C);
 }
 
 .list {
@@ -8,18 +8,47 @@ body {
   align-content: center;
   margin-top: 10vh;
 }
-
+/* 
 .profile {
-  width: 90rem;
+  width: 20rem;
   border-radius: 20%;
   display: inline-block;
   padding: 2rem;
+  margin:0 auto;
   margin-bottom: 2rem;
   background-color: rgba(255, 211, 16, 0.89);
   border: 2px solid rgb(255, 255, 255, 0.5);
+} */
+.intext {
+  font-size: 1.3rem;
+  color: aliceblue;
+  padding:2rem;  
 }
 
-.profile img {
-  width: 90rem;
-  border-radius: 18%;
+.what {
+  padding:3rem;
+}
+
+.profile1 {
+  float:left;
+  display:inline-block;
+}
+
+.profile1 img {
+  width: 30rem;
+  border: 0.4rem outset rgba(241, 143, 16, 0.87);
+  border-radius: 2rem;
+  
+}
+
+.profile2 {
+  margin: 3rem;
+  float:right;
+  display:inline-block;
+}
+
+.profile2 img {
+  width: 30rem;
+  border: 0.4rem outset rgba(241, 143, 16, 0.87);
+  border-radius: 2rem;
 }
