--- a/static/css/goods.css
+++ b/static/css/goods.css
@@ -8,3 +8,116 @@ body {
   align-content: center;
   margin-top: 100px;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+.img {
+width:300px;
+height:300px;
+background-color:white;
+background-size:300px 300px;
+}
+a:link{
+    color:black;
+    text-decoration:none;
+}
+a:visited{
+    color:black;
+    text-decoration:none;
+}
+.ac1:hover .imc1{
+    display:none;
+}
+.ac1:hover .dis1{
+    display:block;
+}
+.ac2:hover .imc2{
+    display:none;
+}
+.ac2:hover .dis2{
+    display:block;
+}
+.ac3:hover .imc3{
+    display:none;
+}
+.ac3:hover .dis3{
+    display:block;
+}
+.ac4:hover .imc4{
+    display:none;
+}
+.ac4:hover .dis4{
+    display:block;
+}
+
+.dis1 {
+    width:300px;
+    height:75px;
+    font-size:25px;
+    line-height:75px;
+    display:none;
+    text-align:center;
+    background-size:cover;
+    background-position: 0% 0%;
+}
+.dis2 {
+    width:300px;
+    height:75px;
+    font-size:25px;
+    line-height:75px;
+    display:none;
+    text-align:center;
+    background-size:cover;
+    background-position: 0% 33.3%;
+}
+.dis3 {
+    width:300px;
+    height:75px;
+    font-size:25px;
+    line-height:75px;
+    display:none;
+    text-align:center;
+    background-size:cover;
+    background-position: 0% 66.6%;
+}
+.dis4 {
+    width:300px;
+    height:75px;
+    font-size:25px;
+    line-height:75px;
+    display:none;
+    text-align:center;
+    background-size:cover;
+    background-position: 0% 99.9%;
+}
+.imc1 {
+    width:300px;
+    height:75px;
+    background-size:cover;
+    background-position: 0% 0%;
+    font-size:25px;
+    line-height:50px;
+}
+.imc2 {
+    width:300px;
+    height:75px;
+    background-size:cover;
+    background-position: 0% 33.3%;
+    font-size:25px;
+    line-height:50px;
+}
+.imc3 {
+    width:300px;
+    height:75px;
+    background-size:cover;
+    background-position: 0% 66.6%;
+    font-size:25px;
+    line-height:50px;
+}
+.imc4 {
+    width:300px;
+    height:75px;
+    background-size:cover;
+    background-position: 0% 99.9%;
+    font-size:25px;
+    line-height:50px;
+}
