--- a/templates/goods.html
+++ b/templates/goods.html
@@ -13,8 +13,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/goods.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/main.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/goods.css') }}" />
   </head>
 
   <body>
